--- a/19_練習_HellojQuery.html
+++ b/19_練習_HellojQuery.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="../_js/jquery-3.4.1.js"></script>
+    <script src="./_js/jquery-3.4.1.js"></script>
 </head>
 
 <body>
     <h3>apple</h3>
+    <img src="./img/kutar3.png" alt="">
     <div id="main">
         <div>Hello</div>
         <div>jQuery</div>
