remove apple & kutar

--- a/19_練習_HellojQuery.html
+++ b/19_練習_HellojQuery.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h3>apple</h3>
-    <img src="./img/kutar3.png" alt="">
+    <!-- <h3>apple</h3> -->
+    <!-- <img src="./img/kutar3.png" alt=""> -->
     <div id="main">
         <div>Hello</div>
         <div>jQuery</div>
